fix: fixed gapItem slider, fixed position him arrows, fixed width testimonials, and fixed if in panel amount in donate page

--- a/online-zoo/pages/main/styles/media.css
+++ b/online-zoo/pages/main/styles/media.css
@@ -28,7 +28,7 @@
         }
     }
     
-    @media (max-width: 1100px) {
+    @media (max-width: 1200px) {
         .pets__items {
             grid-auto-columns: 31.3%;
         }
@@ -220,16 +220,7 @@
         }
     }
     
-    @media (max-width: 800px) {
-        .pets__items {
-            row-gap: 72px;
-        }
-    }
-    
     @media (max-width: 730px) {
-        .pets__items {
-            row-gap: 42px;
-        }
         .pets__btns {
             top: 49%;
         }
@@ -361,11 +352,8 @@
             padding-left: 11px;
             padding-top: 6px;
         }
-        .pets__items {
-            row-gap: 33px
-        }
         .pets__btns {
-            top: 48%;
+            top: 50%;
             max-width: 194px;
         }
         .pets__box {
@@ -500,6 +488,7 @@
             grid-template-columns: 100%;
             grid-template-rows: repeat(4, auto);
             column-gap: 0;
+            row-gap: 20px;
         }
         .pets__btns {
             display: none;
