--- a/online-zoo/pages/main/styles/style.css
+++ b/online-zoo/pages/main/styles/style.css
@@ -541,6 +541,7 @@
 
 .testimonials__card.testimonials__card-popup {
     max-width: 267px;
+    width: 100%;
     max-height: 391px;
     height: 100%;
     position: relative;
@@ -551,6 +552,8 @@
 }
 
 .testimonials__cards-wrap .testimonials__box-popup {
+    max-width: 267px;
+    width: 100%;
     transition: opacity 0.9s;
     position: absolute;
     z-index: -1;
